--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta name='viewport'content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Kevin Shallvari</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gelasio:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
-      <header>
-          <div class="header">
+      <header class="header">
               <h1>Kevin Shallvari</h1>
-          </div>
       </header>
+
+              <section class="section-container">
+
+                <div><img src="images/Me-bg-s.png" alt="ME" width="100%"></div>
+              </section>
+              <div class="description">
+
+              </div>
+
 
 
 
