--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Kevin Shallvari</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
   </head>
   <body>
       <header class="header">
               <h1>Kevin Shallvari</h1>
       </header>
 
-              <section class="section-container">
-
-                <div><img src="images/Me-bg-s.png" alt="ME" width="100%"></div>
+              <section class="section-container shadow">
+                <h2>KEVIN SHALLVARI = LEONARDO</h2>
+                <p>QUI LA BIO</p>
               </section>
               <div class="description">
 
