--- a/index.html
+++ b/index.html
@@ -7,17 +7,33 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
       <header class="header">
               <h1>Kevin Shallvari</h1>
       </header>
 
-              <section class="section-container shadow">
-                <h2>KEVIN SHALLVARI = LEONARDO</h2>
-                <p>QUI LA BIO</p>
+              <section class="section-container shadow ">
+                <h2>LEONARDO</h2>
+                <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
+                    I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> </p>
               </section>
-              <div class="description">
+
+              <section class="section-container-2 shadow-rv" id="out-of-cage">
+                  <h2>OUT OF THE CAGE</h2>
+                  <p>Ho vissuto metà della mia vita in Sud Italia nella magnifica Puglia, l'altrà metà al Nord: in Piemonte.<br>
+                    In quest'ultimo ho sviluppato la mia passione per le produzioni di musica Techno e ho iniziato a collezionare <span id="records"><a href="https://www.discogs.com/it/user/prod.absolute/collection" target="_blank">Dischi </a></span>. <br>
+                    </p>
+                  <div class="video">
+
+                  </div>
+
+              </section>
+
+
+
+              <div class="description ">
 
               </div>
 
