--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
               <section class="section-container-2 shadow-rv" id="out-of-cage">
                   <h2>OUT OF THE CAGE</h2>
-                  <p>Ho vissuto metà della mia vita in Sud Italia nella magnifica Puglia, l'altrà metà al Nord: in Piemonte.<br>
-                    In quest'ultimo ho sviluppato la mia passione per le produzioni di musica Techno e ho iniziato a collezionare <span id="records"><a href="https://www.discogs.com/it/user/prod.absolute/collection" target="_blank">Dischi </a></span>. <br>
+                  <p>I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
+It's here, amongst the hills and vines of the Langhe, that I've developed my love for music: I started collecting <span id="records"><a href="https://www.discogs.com/it/user/prod.absolute/collection" target="_blank"> RECORDS </a></span> before discovering the production side of music, especially techno, and starting to make my own.
                     </p>
                   <div class="video">
 
