--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport'content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Kevin Shallvari</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="images/mini-icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
@@ -15,29 +16,22 @@
       </header>
 
               <section class="section-container shadow ">
-                <h2>LEONARDO</h2>
+                <img src="images/me-s.png" alt="This Is me playing for Xmas Party" width="100%">
+                <h2>ALTER EGO</h2>
                 <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
                     I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> </p>
+
               </section>
 
-              <section class="section-container-2 shadow-rv" id="out-of-cage">
+
+
+              <section class="section-container-2 shadow-rv">
                   <h2>OUT OF THE CAGE</h2>
                   <p>I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
 It's here, amongst the hills and vines of the Langhe, that I've developed my love for music: I started collecting <span id="records"><a href="https://www.discogs.com/it/user/prod.absolute/collection" target="_blank"> RECORDS </a></span> before discovering the production side of music, especially techno, and starting to make my own.
+                    However the little town where I live feels like a cage to me, so I decided to create this webpage to fully express myself !
                     </p>
-                  <div class="video">
-
-                  </div>
-
               </section>
-
-
-
-              <div class="description ">
-
-              </div>
-
-
 
 
   </body>
