--- a/index.html
+++ b/index.html
@@ -19,18 +19,31 @@
                 <img src="images/me-s.png" alt="This Is me playing for Xmas Party" width="100%">
                 <h2>ALTER EGO</h2>
                 <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
-                    I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> </p>
-
-              </section>
-
-
-
-              <section class="section-container-2 shadow-rv">
-                  <h2>OUT OF THE CAGE</h2>
-                  <p>I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
+                    I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> <br>
+                I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
 It's here, amongst the hills and vines of the Langhe, that I've developed my love for music: I started collecting <span id="records"><a href="https://www.discogs.com/it/user/prod.absolute/collection" target="_blank"> RECORDS </a></span> before discovering the production side of music, especially techno, and starting to make my own.
                     However the little town where I live feels like a cage to me, so I decided to create this webpage to fully express myself !
                     </p>
+              </section>
+
+              <section class="section-container-2 ">
+                <h2>SPIN THAT</h2>
+                <p>When deciding on what records to play as a dj, I love to focus on what that particular record might be able to spark in the body and the soul of whoever is listening, could that be an emotion or a not-so-hidden message laying underneath the beat, while also setting the mood for the night.
+
+While stuck in quarantine due to Covid-19, I've been asked by "If It's Good I'll Play It" — a collective of dj and producers — to create a dj set that could help people be more positive and filled with good vibes.</p>
+                <div id="mixcloud-player">
+                  <iframe width="100%" height="120"  src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FIIGIPI%2Fif-its-good-ill-play-it-podcast-011-leonardo%2F" frameborder="0" ></iframe>
+                </div>
+              </section>
+
+              <section class="section-container shadow-rv">
+                  <h2>SKILLS</h2>
+                  <p>But I don't simply select records, I can also use many software for audio production like</p>
+                  <div class="section-container logo-box ">
+                    <img src="images/logo-reason.svg" alt="REASON 11" width="80">
+                    <img src="images/Ableton.svg" alt="ABLETON" width="100">
+                    <img src="images/Presonus-logo-vector.svg" alt="PRESONUS STUDIO ONE" width="100">
+                  </div>
               </section>
 
 
