--- a/index.html
+++ b/index.html
@@ -26,25 +26,28 @@ It's here, amongst the hills and vines of the Langhe, that I've developed my lov
                     </p>
               </section>
 
-              <section class="section-container-2 ">
+              <section class="section-container-2 shadow">
                 <h2>SPIN THAT</h2>
                 <p>When deciding on what records to play as a dj, I love to focus on what that particular record might be able to spark in the body and the soul of whoever is listening, could that be an emotion or a not-so-hidden message laying underneath the beat, while also setting the mood for the night.
-
 While stuck in quarantine due to Covid-19, I've been asked by "If It's Good I'll Play It" — a collective of dj and producers — to create a dj set that could help people be more positive and filled with good vibes.</p>
                 <div id="mixcloud-player">
                   <iframe width="100%" height="120"  src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FIIGIPI%2Fif-its-good-ill-play-it-podcast-011-leonardo%2F" frameborder="0" ></iframe>
                 </div>
               </section>
 
-              <section class="section-container shadow-rv">
+              <section class="section-container shadow">
                   <h2>SKILLS</h2>
-                  <p>But I don't simply select records, I can also use many software for audio production like</p>
-                  <div class="section-container logo-box ">
-                    <img src="images/logo-reason.svg" alt="REASON 11" width="80">
+                  <p>But I don't simply select records, I can also use many software for audio production. They all needed to compose my "Vertigo Venus" EP</p>
+                  <div class="logo-box">
+                    <img src="images/logo-reason.svg" alt="REASON 10" width="80">
                     <img src="images/Ableton.svg" alt="ABLETON" width="100">
                     <img src="images/Presonus-logo-vector.svg" alt="PRESONUS STUDIO ONE" width="100">
                   </div>
+                  <div class="section-container-2 " id="soundcloud">
+                    <iframe width="100%" height="350" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/988772776%3Fsecret_token%3Ds-kmpZE&color=%23333533&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
               </section>
+
+
 
 
   </body>
