--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name='viewport'content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Kevin Shallvari</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/mini-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
@@ -15,8 +16,8 @@
               <h1>Kevin Shallvari</h1>
       </header>
 
-              <section class="section-container shadow ">
-                <img id="alter-ego" src="images/me-s.png" alt="This Is me playing for Xmas Party">
+              <section class="section-container shadow  animate__animated animate__backInLeft animate__slow">
+                <img  id="alter-ego" src="images/me-s.png" alt="This Is me playing for Xmas Party">
                 <h2>ALTER EGO</h2>
                 <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
                     I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> <br>
@@ -26,7 +27,7 @@ It's here, amongst the hills and vines of the Langhe, that I've developed my lov
                     </p>
               </section>
 
-              <section class="section-container-2 shadow">
+              <section class="section-container-2 shadow animate__animated animate__backInRight animate__slow ">
                 <h2>SPIN THAT...</h2>
                 <p>When deciding on what records to play as a dj, I love to focus on what that particular record might be able to spark in the body and the soul of whoever is listening, could that be an emotion or a not-so-hidden message laying underneath the beat, while also setting the mood for the night.
 While stuck in quarantine due to Covid-19, I've been asked by <span id="iigipi"> <a href="https://www.instagram.com/iigipi/" target="_blank">"If It's Good I'll Play It" </a></span> — a collective of dj and producers — to create a dj set that could help people be more positive and filled with good vibes.</p>
@@ -35,19 +36,21 @@ While stuck in quarantine due to Covid-19, I've been asked by <span id="iigipi">
                 </div>
               </section>
 
-              <section class="section-container shadow">
+              <section class="section-container shadow animate__animated animate__backInLeft animate__slow ">
                   <h2>SKILLS</h2>
                   <p>But I don't simply select records, I can also use many software for audio production. They all needed to compose my "Vertigo Venus" EP</p>
                   <div class="logo-box">
-                    <a href="https://www.reasonstudios.com/en/reason/new" target="_blank"><img src="images/logo-reason.svg" alt="REASON 10" width="80"></a>
-                    <a href="https://www.ableton.com/" target="_blank"> <img src="images/Ableton.svg" alt="ABLETON" width="100" ></a>
-                    <a href="https://www.presonus.com/products/Studio-One" target="_blank"><img src="images/Presonus-logo-vector.svg" alt="PRESONUS STUDIO ONE" width="100" ></a>
+                    <a href="https://www.reasonstudios.com/en/reason/new" target="_blank"><img src="images/logo-reason.svg" alt="REASON 10"></a>
+                    <a href="https://www.ableton.com/" target="_blank"> <img src="images/Ableton.svg" alt="ABLETON" ></a>
+                    <a href="https://www.presonus.com/products/Studio-One" target="_blank"><img src="images/Presonus-logo-vector.svg" alt="PRESONUS STUDIO ONE"  ></a>
                   </div>
                   <div class="section-container-2 " id="soundcloud">
                     <iframe width="100%" height="350" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/988772776%3Fsecret_token%3Ds-kmpZE&color=%23333533&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
               </section>
 
+              <footer class="section-container animate__animated animate__backInLeft animate__slow ">
 
+              </footer>
 
 
   </body>
