--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
+
+
+
       <header class="ks">
               <h1>Kevin Shallvari</h1>
       </header>
-
-              <main class="page-container">
+<main class="page-container">
 
               <section class="section-container shadow  animate__animated animate__backInLeft animate__slow">
-                <img  id="alter-ego" src="images/me-s.png" alt="This Is me playing for Xmas Party">
-                <h2>ALTER EGO</h2>
+                <picture class="image-container">
+                  <source media='(min-width: 426px)'
+                    srcset="images/me-s.png"/>
+                  <img class="my-picture" src="images/me-mobile.png"
+                   alt="This Is me playing for Xmas Party"> </picture>
                 <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
                     I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> <br>
                 I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
