--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <header class="ks">
               <h1>Kevin Shallvari</h1>
       </header>
-      <main class="page-container">
-                <picture class="image-container shadow  animate__animated animate__backInLeft animate__slow">
+
+      <section class="section-container bio shadow  animate__animated animate__backInRight animate__slow">
+                <picture class="image-container">
                   <source media='(min-width: 426px)'
                     srcset="images/me-s.png"/>
                   <img class="my-picture" src="images/me-mobile.png"
                    alt="This Is me playing for Xmas Party"> </picture>
-
-               <section class="section-container shadow  animate__animated animate__backInRight animate__slow">
+      <main class="page-container">
                 <p>Born in Tirana (AL) on June 12th 1994, I'm a young guy with a passion for music and all things geeky!<br>
                     I have been making music for 12 years with the alias <span id="leonardo">Leonardo</span> and I now want to make the next step:<span id="introduce"> INTRODUCE MYSELF TO THE WORLD </span> <br>
                 I've spent the first half of my life in Southern Italy, in the gorgeous region of Puglia, before moving up North to Piemonte, where I've lived ever since. <br>
@@ -38,8 +38,7 @@ It's here, amongst the hills and vines of the Langhe, that I've developed my lov
                 <h2>SPIN THAT...</h2>
                 <p>When deciding on what records to play as a dj, I love to focus on what that particular record might be able to spark in the body and the soul of whoever is listening, could that be an emotion or a not-so-hidden message laying underneath the beat, while also setting the mood for the night.
 While stuck in quarantine due to Covid-19, I've been asked by <span class="external external-b gradient"> <a href="https://www.instagram.com/iigipi/" target="_blank">"If It's Good I'll Play It" </a></span> — a collective of dj and producers — to create a dj set that could help people be more positive and filled with good vibes.</p>
-<iframe id="mix-1" width="100%" height="400" src="https://www.mixcloud.com/widget/iframe/?feed=%2FIIGIPI%2Fif-its-good-ill-play-it-podcast-011-leonardo%2F" frameborder="0" ></iframe>
-<iframe id="mix-2"width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FIIGIPI%2Fif-its-good-ill-play-it-podcast-011-leonardo%2F" frameborder="0" ></iframe>
+<iframe id="mix-1" width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FIIGIPI%2Fif-its-good-ill-play-it-podcast-011-leonardo%2F" frameborder="0" ></iframe>
               </section>
 
               <section class="section-container shadow animate__animated animate__backInRight animate__slow ">
