--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
       <header class="ks">
               <h1>Kevin Shallvari</h1>
+              <div> <img id= 'vinyl' src="images/vinyl.svg" width="50"></div>
       </header>
 
       <section class="section-container bio shadow  animate__animated animate__backInRight animate__slow">
@@ -72,5 +73,6 @@ That's why I've started my journey in the <span class="external external-b"> <a 
               </footer>
 
 
+              <script src="script.js"></script>
   </body>
 </html>
